# dotfiles

./: .bash_profile  .bash_profile_mac  .bashrc  .gitconfig  .gitmodules  .tmux.conf  .vimrc  LICENSE  brew.sh  install-symlinks.sh
empty-project/: CMakeLists.txt  Pipfile  clang.toolchain  main.cpp
empty-project/unit/: test.cpp
